<?xml version="1.0" encoding="utf-8"?>
<resources>
    /*
    Aqui le asigne los valores que llevaran los strings que se usan en la aplicacion
    */
    <string name="app_name">BasedeD</string>
    <string name="action_settings">Settings</string>
    <string name="codigo">Codigo:</string>
    <string name="name">Nombre del libro:</string>
    <string name="autor">Autor:</string>
    <string name="editorial">Editorial:</string>
    <string name="precio">Precio:</string>
    <string name="agregar">Agregar</string>
    <string name="eliminar">Eliminar</string>
    <string name="consultar">Consultar</string>
    <string name="modificar">Modificar</string>
    <string name="limpiar">Limpiar</string>

    <string name="camposv"> Llene todos los campos</string>
    <string name="libron"> Se agregó un nuevo libro</string>
    <string name="libroen"> Libro encontrado</string>
    <string name="librono">  Libro no encontrado</string>
    <string name="ingreco"> Ingrese un código</string>
    <string name="borro"> Se borró el libro</string>
    <string name="nolibro"> El libro no existe</string>
    <string name="modificado"> Los datos del libro se modificaron</string>
    <string name="llenar"> Llene todos los campos</string>

</resources>
